# sudo_i_am_alive

./: ,  .gitignore  CMakeLists.txt  LICENSE  README.md  arc.md  sudo_i_am_alive  yapilacaklar.md
config/: default_dna.json
include/core/: ResponseGenerator.hpp  SentinelConfig.hpp  StateMachine.hpp
include/memory/: CognitiveRouter.hpp  EmbeddingProcessor.hpp  MemoryManager.hpp
include/sensors/: ClipboardMonitor.hpp  ResearchService.hpp  SystemObserver.hpp  TerminalMonitor.hpp
src/: main.cpp
src/core/: ResponseGenerator.cpp  SentinelConfig.cpp  StateMachine.cpp
src/memory/: CognitiveRouter.cpp  EmbeddingProcessor.cpp  MemoryManager.cpp
src/sensors/: ClipboardMonitor.cpp  ResearchService.cpp  SystemObserver.cpp  TerminalMonitor.cpp
